# SPDX-FileCopyrightText: 2021 Klarälvdalens Datakonsult AB, a KDAB Group company <info@kdab.com>
# SPDX-FileContributor: Andrew Hayzen <andrew.hayzen@kdab.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "demo-threading"
version = "0.1.0"
authors = ["Andrew Hayzen <andrew.hayzen@kdab.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["staticlib"]

[dependencies]
async-std = "1.10"
cxx = "1.0"
cxx-qt = { path = "../../cxx-qt" }
cxx-qt-lib = { path = "../../cxx-qt-lib" }
futures = "0.3"
futures-timer = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

[build-dependencies]
cxx-qt-build = { path = "../../cxx-qt-build" }
